# clas12Tags

./: README.md
4a.2.4/: clas12.gcard
ALERT/: alert_clas12.gcard  clas12.gcard
ALERT/experiments/clas12/alert/: alert.gdml  alertTarget.gdml
ALERT/geometryGenAlert/: alert.gdml  viewALERT.C
ALERT/geometryGenAlert/alert/: CMakeLists.txt  buildcommand.txt  runAlert.cpp
ALERT/geometryGenAlert/alert-build/: ALERTdetector.gdml  CMakeCache.txt  Makefile  alert  alert.gdml  cmake_install.cmake
ALERT/geometryGenAlert/alert/include/: ALERTConstruction.hh  DCGeometry.hh  DCWire.hh  RCGeometry.hh  RecoilChamberDetectorGeometry.hh  RecoilHodoDetectorGeometry3.hh
ALERT/geometryGenAlert/alert/src/: ALERTConstruction.cc  DCGeometry.cc  DCWire.cc  RCGeometry.cc  RecoilChamberDetectorGeometry.cc  RecoilHodoDetectorGeometry3.cc
ALERT/geometryGenAlert/validate/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  validate  validate.cc
